# frankentorch

./: .gitignore  .skill-loop-progress-TurquoisePine.md  .skill-loop-progress.md  AGENTS.md  CHANGELOG.md  COMPREHENSIVE_SPEC_FOR_FRANKENTORCH_V1.md  Cargo.toml  EXECUTION_TODO_GRANULAR.md  EXHAUSTIVE_LEGACY_ANALYSIS.md  EXISTING_PYTORCH_STRUCTURE.md  FEATURE_PARITY.md  FRANKENSQLITE_ADAPTATION_CROSSWALK.md  PHASE2C_EXTRACTION_PACKET.md  PLAN_TO_PORT_PYTORCH_TO_RUST.md  PROFILING-RESULTS.md  PROPOSED_ARCHITECTURE.md  README.md
.beads/: issues.jsonl
.github/workflows/: phase2c_reliability_gates.yml
artifacts/beads_recovery/: FRANKENTORCH_XSP_IMPORT_PATH_REPORT_20260407.md
artifacts/optimization/: 2026-02-13_phase2c_hotspot_matrix.md  2026-02-13_phase2c_isomorphism.md  2026-02-13_scalar_dac_profile.md  2026-02-14_foundation_perf_rebaseline.json  2026-02-14_foundation_perf_rebaseline.md  2026-02-14_packet_parallel_validation.md  (+28 more)
crates/ft-api/: Cargo.toml
crates/ft-api/benches/: cdist_bench.rs  ops_bench.rs  pytorch_gauntlet_bench.rs  pytorch_max_pool1d_grad.py  pytorch_max_pool3d_grad.py  pytorch_sdpa_grad.py  special_bench.rs
crates/ft-api/examples/: _mm_shape_probe.rs  act_bwd_h2h.rs  act_f32_h2h.rs  act_gapfind_h2h.rs  act_parity.rs  activation_h2h.rs  activation_sweep_h2h.rs  addmm_grad_h2h.rs  affine_grid_f32_h2h.rs  affine_grid_h2h.rs  amax_f32_parity.rs  argmax_f64_h2h.rs  argreduce_h2h.rs  argsort_wrapper_h2h.rs  asinh_atanh_h2h.rs  asym_dtype_sweep2_h2h.rs  asym_dtype_sweep_h2h.rs  avgpool1d_phase_timing.rs  ball_query_h2h.rs  batched_cond_grad_h2h.rs  batched_cond_rank_h2h.rs  batched_eig_grad_h2h.rs  batched_eig_h2h.rs  batched_eigh_api_h2h.rs  batched_eigh_f32_h2h.rs  batched_eigh_grad_h2h.rs  batched_eigvals_grad_h2h.rs  batched_eigvals_h2h.rs  batched_eigvalsh_api_h2h.rs  batched_f32_evq_h2h.rs  batched_f32_linalg_h2h.rs  batched_f32_svdderiv_h2h.rs  batched_inv_probe.rs  batched_lstsq_grad_h2h.rs  batched_lstsq_h2h.rs  batched_lu_grad_h2h.rs  batched_matnorm_h2h.rs  batched_matrix_exp_grad_h2h.rs  batched_matrix_exp_h2h.rs  batched_matrix_norm_grad_h2h.rs  (+400 more)
crates/ft-api/src/: lib.rs
crates/ft-api/tests/: cholesky_double_backward_parity.rs  grad_fd_audit.rs  inverse_logdet_double_backward_parity.rs  logsumexp_double_backward_parity.rs  op_guards_cod4.rs  solve_double_backward_parity.rs  triangular_solve_double_backward_parity.rs
crates/ft-autograd/: Cargo.toml
crates/ft-autograd/benches/: backward_bench.rs
crates/ft-autograd/src/: lib.rs
crates/ft-autograd/src/snapshots/: ft_autograd__tests__scheduler_property_log.snap  ft_autograd__tests__tensor_scheduler_telemetry_golden.snap
crates/ft-core/: Cargo.toml
crates/ft-core/src/: lib.rs
crates/ft-kernel-metal/: Cargo.toml
crates/ft-kernel-metal/src/: fused.rs  lib.rs
crates/ft-optim/: Cargo.toml
crates/ft-optim/benches/: optimizer_bench.rs
crates/ft-optim/examples/: adamax_par_ab.rs  asgd_step_time.rs  sgd_par_ab.rs
crates/ft-optim/src/: lib.rs
crates/ft-runtime/: Cargo.toml
crates/ft-runtime/benches/: runtime_bench.rs
crates/ft-runtime/src/: lib.rs
docs/: NEGATIVE_EVIDENCE.md  RELEASE_READINESS_SCORECARD.md  UBS_POLICY.md
fuzz/: Cargo.toml
hooks/: pre-commit
scripts/: diff_probe_torch.py
(+701 files in other folders)
