[package]
name = "ft-autograd"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
ft-core = { workspace = true }
ft-dispatch = { workspace = true }
ft-kernel-cpu = { workspace = true }
libm = { workspace = true }
rayon = "1.10"

[dev-dependencies]
insta = "1.47.2"
proptest = "1.6.0"
criterion = { workspace = true }

[[bench]]
name = "backward_bench"
harness = false

[lints]
workspace = true
