[package]
name = "ft-core"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
half = { version = "2.4", features = ["bytemuck"] }
num-complex = "0.4"

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.6.0"

[[bench]]
name = "core_bench"
harness = false

[lints]
workspace = true
