[package]
name = "ft-optim"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
ft-core = { workspace = true }
ft-api = { workspace = true }
ft-autograd = { workspace = true }
ft-dispatch = { workspace = true }
rayon = "1.10"

[dev-dependencies]
criterion = { workspace = true }
ft-nn = { workspace = true }

[[bench]]
name = "optimizer_bench"
harness = false

[lints]
workspace = true
